pembuatan Section about  dan styling

--- a/index.htm
+++ b/index.htm
@@ -22,7 +22,7 @@
            </nav>
 
            <section class="hero">
-                <p>👋,Halo Netijen aku Nando dan aku Mahasiswa Informatika</p>
+                <p>👋,Halo Netijen i'm Student</p>
                 <h1>
                     <span>WEBDEVELOPMENT</span>
                      <br>
@@ -43,12 +43,17 @@
         <section class="section section-story">
             <h1>About Me</h1>
             <div class="tambah-story">
-                <ul>
-                    <li class="bg-img"><div class="img"></div></li>
-                    <li class="tambah-desk">Hi Netijen My name is Faishal Fernando Hutama, I'm student of Computer Science in <br>
-                        University Pembagunan Nasional "Veteran" East Java. Now I'm in my 5th semester of education, for me coding <br>
-                         is a fun and refreshing activity</li>
-                </ul>
+                <div class="bg-img">
+                    <div class="img"></div>
+                </div>
+                <div class="btn-desk">
+                    <p><span>Hi <span class="dalam">Netijen!</span></span> <br>
+                        My name is Faishal Fernando Hutama, I'm student of Computer Science in <br>
+                        University Pembagunan Nasional "Veteran" East Java. Now I'm in my 5th <br> 
+                        semester of education, for me coding is a fun and refreshing activity</p>
+                    <button><a href="#">My Story</a></button>
+                    <hr class="garis">
+                </div>
             </div>
 
             
