pembuatan section porto belum fix

--- a/index.htm
+++ b/index.htm
@@ -22,7 +22,7 @@
            </nav>
 
            <section class="hero">
-                <p>👋,Halo Netijen i'm Student</p>
+                <p>👋,Halo Netijen i'm Student of Computer Science</p>
                 <h1>
                     <span>WEBDEVELOPMENT</span>
                      <br>
@@ -47,18 +47,31 @@
                     <div class="img"></div>
                 </div>
                 <div class="btn-desk">
-                    <p><span>Hi <span class="dalam">Netijen!</span></span> <br>
-                        My name is Faishal Fernando Hutama, I'm student of Computer Science in <br>
+                    <p><span class="dalam-1">Hi <span class="dalam-2">Netijen!</span></span> <br>
+                        My name is <span class="dalam-2">Faishal Fernando Hutama</span>, I'm student of Computer Science in <br>
                         University Pembagunan Nasional "Veteran" East Java. Now I'm in my 5th <br> 
                         semester of education, for me coding is a fun and refreshing activity</p>
-                    <button><a href="#">My Story</a></button>
+                    <button><a href="#">About Me</a></button>
                     <hr class="garis">
                 </div>
             </div>
+        </section>
 
-            
+        <section class="section section-porto">
+            <h1>Here is my favorite project</h1>
+            <div class="tambah-section-porto">
+                <ul>
+                    <li>halo</li>
+                    <li>halo</li>
+                    <li>halo</li>
+                </ul>
+            </div>
         </section>
     </main>
+
+    <footer>
+
+    </footer>
     <script src="script.js"></script>
 </body>
 </html>
