--- a/index.htm
+++ b/index.htm
@@ -7,13 +7,13 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header>
+    <header id="Home">
         <div class="container">
            <nav>
                 <h1>Personal Website</h1>
                 <div class="tambah">
                     <ul>
-                        <li><a href="#">Home</a></li>
+                        <li><a href="#Home">Home</a></li>
                         <li><a href="#">About</a></li>
                         <li><a href="#">Porto</a></li>
                         <li><a href="#">Blog</a></li>
