--- a/index.htm
+++ b/index.htm
@@ -8,8 +8,7 @@
 </head>
 <body>
     <header id="Home">
-        <div class="container">
-           <nav>
+           <nav id="nav-nav">
                 <h1>Personal Website</h1>
                 <div class="tambah">
                     <ul>
@@ -20,23 +19,21 @@
                     </ul>
                 </div>
            </nav>
-
-           <section class="hero">
-                <p>👋,Halo Netijen i'm Student of Computer Science</p>
-                <h1>
-                    <span>WEBDEVELOPMENT</span>
-                     <br>
-                    &TECH-COLLAGE
-                </h1>
-                <div class="img"></div>
-                <div class="button-hero">
-                   <ul>
-                    <li><span><a href="#">Download CV</a></span></li>
-                    <li><a href="#">Contact Me</a></li>
-                   </ul>
-                </div>
-           </section>
-        </div>
+        <section class="hero">
+            <p>👋,Halo Netijen i'm Student of Computer Science</p>
+            <h1>
+                <span>WEBDEVELOPMENT</span>
+                 <br>
+                &TECH-COLLAGE
+            </h1>
+            <div class="img"></div>
+            <div class="button-hero">
+               <ul>
+                <li><span><a href="#">Download CV</a></span></li>
+                <li><a href="#">Contact Me</a></li>
+               </ul>
+            </div>
+       </section>
     </header>
 
     <main>
@@ -61,7 +58,11 @@
             <h1>Here is my favorite project</h1>
             <div class="tambah-section-porto">
                 <ul>
-                    <li>halo</li>
+                    <li>
+                        <div class="img"></div>
+                        <button></button>
+                        <button></button>
+                    </li>
                     <li>halo</li>
                     <li>halo</li>
                 </ul>
