penambahan element dan effect pada section porto

--- a/index.htm
+++ b/index.htm
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FF</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome.min.css"/>
 </head>
 <body>
     <header id="Home">
@@ -58,13 +59,25 @@
             <h1>Here is my favorite project</h1>
             <div class="tambah-section-porto">
                 <ul>
-                    <li>
-                        <div class="img"></div>
-                        <button></button>
-                        <button></button>
+                    <li class="tambah-atas">
+                        <div class="img satu"></div>
+                        <h2>Website Belajar</h2>
+                        <div class="tambah-dal">
+                            <ul>
+                                <li><ion-icon name="logo-html5"></ion-icon>HTML</li>
+                                <li><ion-icon name="logo-css3"></ion-icon>CSS</li>
+                                <li><ion-icon name="logo-javascript"></ion-icon>JavaScript</li>
+                            </ul>
+                            <p>Tema dari web ini adalah edukasi dimana fitur utama dari web ini adalah materi Sekolah Dasar</p>
+                            <span><a href="https://github.com/NandoI/Pemrograman-Web/tree/fc524209a551606c721c7806843ee4ea71503f87/uas"><ion-icon name="logo-github"></ion-icon>Github</a></span>
+                        </div>
                     </li>
-                    <li>halo</li>
-                    <li>halo</li>
+                    <li class="tambah-atas">
+                        <div class="img dua"></div>
+                    </li>
+                    <li class="tambah-atas">
+                        <div class="img tiga"></div>
+                    </li>
                 </ul>
             </div>
         </section>
@@ -74,5 +87,6 @@
 
     </footer>
     <script src="script.js"></script>
+    <script src="https://unpkg.com/ionicons@latest/dist/ionicons.js"></script>
 </body>
 </html>
