Penyelesaian dan styling section porto landing page

--- a/index.htm
+++ b/index.htm
@@ -49,14 +49,14 @@
                         My name is <span class="dalam-2">Faishal Fernando Hutama</span>, I'm student of Computer Science in <br>
                         University Pembagunan Nasional "Veteran" East Java. Now I'm in my 5th <br> 
                         semester of education, for me coding is a fun and refreshing activity</p>
-                    <button><a href="#">About Me</a></button>
+                    <button><a href="#">More</a></button>
                     <hr class="garis">
                 </div>
             </div>
         </section>
 
         <section class="section section-porto">
-            <h1>Here is my favorite project</h1>
+            <h1>Project</h1>
             <div class="tambah-section-porto">
                 <ul>
                     <li class="tambah-atas">
@@ -64,9 +64,9 @@
                         <h2>Website Belajar</h2>
                         <div class="tambah-dal">
                             <ul>
-                                <li><ion-icon name="logo-html5"></ion-icon>HTML</li>
-                                <li><ion-icon name="logo-css3"></ion-icon>CSS</li>
-                                <li><ion-icon name="logo-javascript"></ion-icon>JavaScript</li>
+                                <li class="html"><ion-icon name="logo-html5"></ion-icon>HTML</li>
+                                <li class="css"><ion-icon name="logo-css3"></ion-icon>CSS</li>
+                                <li class="js"><ion-icon name="logo-javascript"></ion-icon>JavaScript</li>
                             </ul>
                             <p>Tema dari web ini adalah edukasi dimana fitur utama dari web ini adalah materi Sekolah Dasar</p>
                             <span><a href="https://github.com/NandoI/Pemrograman-Web/tree/fc524209a551606c721c7806843ee4ea71503f87/uas"><ion-icon name="logo-github"></ion-icon>Github</a></span>
@@ -74,17 +74,37 @@
                     </li>
                     <li class="tambah-atas">
                         <div class="img dua"></div>
+                        <h2>Website porto v1</h2>
+                        <div class="tambah-dal">
+                            <ul>
+                                <li class="html"><ion-icon name="logo-html5"></ion-icon>HTML</li>
+                                <li class="css"><ion-icon name="logo-css3"></ion-icon>CSS</li>
+                            </ul>
+                            <p>Tema dari website ini adalah perkenalan tentang saya, yang dimana web ini adalah web pertama saya.</p>
+                            <span><a href="https://github.com/NandoI/Pemrograman-Web/tree/fc524209a551606c721c7806843ee4ea71503f87/Biografi"><ion-icon name="logo-github"></ion-icon>Github</a></span>
+                        </div>
                     </li>
                     <li class="tambah-atas">
                         <div class="img tiga"></div>
+                        <h2>Output database</h2>
+                        <div class="tambah-dal">
+                            <ul>
+                                <li class="html"><ion-icon name="logo-html5"></ion-icon>HTML</li>
+                                <li class="css"><ion-icon name="logo-css3"></ion-icon>CSS</li>
+                                <li class="js"><ion-icon name="logo-javascript"></ion-icon>JavaScript</li>
+                            </ul>
+                            <p>Tema dari website ini adalah menampilkan data dari database yang sudah diset diawal mulai dari kolom pertama dan seterusnya</p>
+                            <span><a href="https://github.com/NandoI/Pemrograman-Web/tree/fc524209a551606c721c7806843ee4ea71503f87/utspemweb"><ion-icon name="logo-github"></ion-icon>Github</a></span>
+                        </div>
                     </li>
                 </ul>
             </div>
+            <h2>More Project</h2>
+
         </section>
     </main>
 
     <footer>
-
     </footer>
     <script src="script.js"></script>
     <script src="https://unpkg.com/ionicons@latest/dist/ionicons.js"></script>
