penambahan effect dan pembaruan section about

--- a/index.htm
+++ b/index.htm
@@ -45,18 +45,26 @@
                     <div class="img"></div>
                 </div>
                 <div class="btn-desk">
-                    <p><span class="dalam-1">Hi <span class="dalam-2">Netijen!</span></span> <br>
+                    <h4><span class="dalam-1">Hi <span class="dalam-2">Netijen!</span> im <span class="dalam-2">Nando</span> and iam student of <br> Computer Science surabaya east java</span></h4>
+                    <p> 
                         My name is <span class="dalam-2">Faishal Fernando Hutama</span>, I'm student of Computer Science in <br>
                         University Pembagunan Nasional "Veteran" East Java. Now I'm in my 5th <br> 
                         semester of education, for me coding is a fun and refreshing activity</p>
                     <button><a href="#">More</a></button>
                     <hr class="garis">
+                    <div class="sosmed">
+                        <ul>
+                            <li><a href="https://github.com/NandoI"><ion-icon name="logo-github" class="besar"></ion-icon></a></li>
+                            <li><a href="https://www.linkedin.com/in/faishal-fernando-hutama-87ba84193/"><ion-icon name="logo-linkedin" class="besar"></ion-icon></a></li>
+                            <li><a href="https://www.instagram.com/nando.hh3/"><ion-icon name="logo-instagram" class="besar"></ion-icon></a></li>
+                        </ul>
+                    </div>
                 </div>
             </div>
         </section>
 
         <section class="section section-porto">
-            <h1>Project</h1>
+            <h1>Portofolio</h1>
             <div class="tambah-section-porto">
                 <ul>
                     <li class="tambah-atas">
@@ -99,12 +107,14 @@
                     </li>
                 </ul>
             </div>
-            <h2>More Project</h2>
-
+            <a href=""><h3>More Project <span>➙</span></h3></a>
         </section>
     </main>
 
     <footer>
+        <div class="container-fot">
+            <h1>Faishal Fernando Hutama</h1>
+        </div>
     </footer>
     <script src="script.js"></script>
     <script src="https://unpkg.com/ionicons@latest/dist/ionicons.js"></script>
