--- a/index.htm
+++ b/index.htm
@@ -14,7 +14,7 @@
                 <div class="tambah">
                     <ul>
                         <li><a href="#Home">Home</a></li>
-                        <li><a href="#">About</a></li>
+                        <li><a href="/about/about.html">About</a></li>
                         <li><a href="#">Porto</a></li>
                         <li><a href="#">Blog</a></li>
                     </ul>
@@ -107,13 +107,26 @@
                     </li>
                 </ul>
             </div>
-            <a href=""><h3>More Project <span>➙</span></h3></a>
+            <a href=""><h3>More Project</h3></a>
         </section>
     </main>
 
     <footer>
         <div class="container-fot">
             <h1>Faishal Fernando Hutama</h1>
+            <div class="tambah-fot">
+                <ul class="Nav-fot">
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#">About</a></li>
+                    <li><a href="#">Porto</a></li>
+                    <li><a href="#">Blog</a></li>
+                </ul>
+                <ul class="sosmed">
+                    <li><a href="https://github.com/NandoI"><ion-icon name="logo-github" class="besar"></ion-icon></a></li>
+                    <li><a href="https://www.linkedin.com/in/faishal-fernando-hutama-87ba84193/"><ion-icon name="logo-linkedin" class="besar"></ion-icon></a></li>
+                    <li><a href="https://www.instagram.com/nando.hh3/"><ion-icon name="logo-instagram" class="besar"></ion-icon></a></li>
+                </ul>
+            </div>
         </div>
     </footer>
     <script src="script.js"></script>
