penambahan navbar dan gambar pada about html

--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
                     <ul>
                         <li><a href="#Home">Home</a></li>
                         <li><a href="/about/about.html">About</a></li>
-                        <li><a href="#">Porto</a></li>
-                        <li><a href="#">Blog</a></li>
+                        <li><a href="/porto/porto.html">Porto</a></li>
+                        <li><a href="/blog/blog.html">Blog</a></li>
                     </ul>
                 </div>
            </nav>
@@ -50,7 +50,7 @@
                         My name is <span class="dalam-2">Faishal Fernando Hutama</span>, I'm student of Computer Science in <br>
                         University Pembagunan Nasional "Veteran" East Java. Now I'm in my 5th <br> 
                         semester of education, for me coding is a fun and refreshing activity</p>
-                    <button><a href="#">More</a></button>
+                    <button><a href="about/about.html">More</a></button>
                     <hr class="garis">
                     <div class="sosmed">
                         <ul>
@@ -116,10 +116,10 @@
             <h1>Faishal Fernando Hutama</h1>
             <div class="tambah-fot">
                 <ul class="Nav-fot">
-                    <li><a href="#">Home</a></li>
-                    <li><a href="#">About</a></li>
-                    <li><a href="#">Porto</a></li>
-                    <li><a href="#">Blog</a></li>
+                    <li><a href="#Home">Home</a></li>
+                    <li><a href="/about/about.html">About</a></li>
+                    <li><a href="/porto/porto.html">Porto</a></li>
+                    <li><a href="/blog/blog.html">Blog</a></li>
                 </ul>
                 <ul class="sosmed">
                     <li><a href="https://github.com/NandoI"><ion-icon name="logo-github" class="besar"></ion-icon></a></li>
