--- a/about/about.html
+++ b/about/about.html
@@ -4,20 +4,36 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
         <nav id="nav-nav">
-            <h1>Personal Website</h1>
-            <div class="tambah">
-                <ul>
-                    <li><a href="#Home">Home</a></li>
-                    <li><a href="#">About</a></li>
-                    <li><a href="#">Porto</a></li>
-                    <li><a href="#">Blog</a></li>
-                </ul>
+            <div class="container-nav">
+                <h1>Personal Website</h1>
+                <div class="tambah">
+                    <ul>
+                        <li><a href="/index.html">Home</a></li>
+                        <li><a href="/about/about.html">About</a></li>
+                        <li><a href="/porto/porto.html">Porto</a></li>
+                        <li><a href="/blog/blog.html">Blog</a></li>
+                    </ul>
+                </div>
             </div>
        </nav>
     </header>
+
+    <main>
+        <section>
+            <div class="sect-about">
+                <div class="bg-img">
+                    <div class="img"></div>
+                </div>
+                <div class="text-dal">
+                    <p>asdfnaenfnasdlnfioewainsdlfnwaenlfnasdlkneinaw</p>
+                </div>
+            </div>
+        </section>
+    </main>
 </body>
 </html>
