--- a/about/about.html
+++ b/about/about.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <nav id="nav-nav">
-            <div class="container-nav">
+            <div id="" class="container-nav">
                 <h1>Personal Website</h1>
                 <div class="tambah">
                     <ul>
@@ -26,14 +26,29 @@
     <main>
         <section>
             <div class="sect-about">
-                <div class="bg-img">
-                    <div class="img"></div>
+                <div class="flex">
+                    <div class="bg-img">
+                        <div class="img"></div>
+                    </div>
+                    <div class="text-dal">
+                        <h2>Hello <span>Netijen!</span>"👋"</h2>
+                        <p class="dal-1">My name is <span class="dalam-2">Faishal Fernando Hutama</span> or you can call me <span class="dalam-2">Nando</span>,
+                            I'm student of Computer Science in University Pembagunan Nasional "Veteran" East Java. Now I'm in my 5th 
+                            semester of education, for me coding is a fun and refreshing activity, I am a 2021 graduate who started 
+                            my journey into coding due to my interest since high school and still continuing it now. I focus on studying web 
+                            application development and web design. The main programming language I'm exploring is Javascript, Php, Database, and well Framework
+                            like React </p>
+                    </div>
                 </div>
-                <div class="text-dal">
-                    <p>asdfnaenfnasdlnfioewainsdlfnwaenlfnasdlkneinaw</p>
+                <div class="scroll">
+                    <h4>scroll down for more ⬇️</h4>
                 </div>
+                
             </div>
         </section>
+
     </main>
+
+    <script src="script.js"></script>
 </body>
 </html>
