--- a/about/about.html
+++ b/about/about.html
@@ -42,13 +42,52 @@
                 </div>
                 <div class="scroll">
                     <h4>scroll down for more ⬇️</h4>
-                </div>
-                
+                </div>           
             </div>
         </section>
 
+        <section>
+            <div class="sect-skill">
+                <div class="dal-skill">
+                    <ul>
+                        <li>
+                            <i class="fa-brands fa-php dal-sect-sk" id="php"></i>
+                            <h4>Php</h4>
+                            <h5>Intermediate</h5>
+                        </li>
+                        <li>
+                            <i class="fa-brands fa-html5 dal-sect-sk" id="html"></i>
+                            <h4>HTML</h4>
+                            <h5>Intermediate</h5>
+                        </li>
+                        <li>
+                            <i class="fa-brands fa-css3-alt dal-sect-sk" id="css"></i>
+                            <h4>CSS</h4>
+                            <h5>Intermediate</h5>
+                        </li>
+                        <li>
+                            <i class="fa-brands fa-square-js dal-sect-sk" id="js"></i>
+                            <h4>Java Script</h4>
+                            <h5>Intermediate</h5>
+                        </li>
+                        <li>
+                            <i class="fa-brands fa-python dal-sect-sk" id="python"></i>
+                            <h4>python</h4>
+                            <h5>Beginer</h5>
+                        </li>
+                        <li>
+                            <i class="fa-solid fa-database dal-sect-sk" id="mysql"></i>
+                            <h4>Mysql</h4>
+                            <h5>Intermediate</h5>
+                        </li>
+                    </ul>
+                </div>
+                <h2>The technologies I'm skilled in.</h2>
+            </div>
+        </section>
     </main>
 
     <script src="script.js"></script>
+    <script src="https://kit.fontawesome.com/bcdab04aab.js" crossorigin="anonymous"></script>
 </body>
 </html>
