penyelesaian page about

--- a/about/about.html
+++ b/about/about.html
@@ -68,7 +68,7 @@
                         <li>
                             <i class="fa-brands fa-square-js dal-sect-sk" id="js"></i>
                             <h4>Java Script</h4>
-                            <h5>Intermediate</h5>
+                            <h5>Beginer</h5>
                         </li>
                         <li>
                             <i class="fa-brands fa-python dal-sect-sk" id="python"></i>
@@ -78,16 +78,36 @@
                         <li>
                             <i class="fa-solid fa-database dal-sect-sk" id="mysql"></i>
                             <h4>Mysql</h4>
-                            <h5>Intermediate</h5>
+                            <h5>Beginer </h5>
                         </li>
                     </ul>
                 </div>
-                <h2>The technologies I'm skilled in.</h2>
+                <h2>The technologies <span>I'm skilled in.</span></h2>
             </div>
         </section>
     </main>
 
+    <footer>
+        <div class="container-fot">
+            <h1>Faishal Fernando Hutama</h1>
+            <div class="tambah-fot">
+                <ul class="Nav-fot">
+                    <li><a href="#Home">Home</a></li>
+                    <li><a href="/about/about.html">About</a></li>
+                    <li><a href="/porto/porto.html">Porto</a></li>
+                    <li><a href="/blog/blog.html">Blog</a></li>
+                </ul>
+                <ul class="sosmed">
+                    <li><a href="https://github.com/NandoI"><ion-icon name="logo-github" class="besar"></ion-icon></a></li>
+                    <li><a href="https://www.linkedin.com/in/faishal-fernando-hutama-87ba84193/"><ion-icon name="logo-linkedin" class="besar"></ion-icon></a></li>
+                    <li><a href="https://www.instagram.com/nando.hh3/"><ion-icon name="logo-instagram" class="besar"></ion-icon></a></li>
+                </ul>
+            </div>
+        </div>
+    </footer>
+
     <script src="script.js"></script>
+    <script src="https://unpkg.com/ionicons@latest/dist/ionicons.js"></script>
     <script src="https://kit.fontawesome.com/bcdab04aab.js" crossorigin="anonymous"></script>
 </body>
 </html>
