pembuatan dan penyelesaian page porto sekaligus js dan stylingnya

--- a/porto/porto.html
+++ b/porto/porto.html
@@ -67,42 +67,42 @@
                             </div>
                         </li>  
                         <li class="tambah-atas">
-                            <div class="img tiga"></div>
-                            <h2>Output database</h2>
+                            <div class="img empat"></div>
+                            <h2>Website porto v2</h2>
                             <div class="tambah-dal">
                                 <ul>
                                     <li class="html"><ion-icon name="logo-html5"></ion-icon>HTML</li>
                                     <li class="css"><ion-icon name="logo-css3"></ion-icon>CSS</li>
                                     <li class="js"><ion-icon name="logo-javascript"></ion-icon>JavaScript</li>
                                 </ul>
-                                <p>Tema dari website ini adalah menampilkan data dari database yang sudah diset diawal mulai dari kolom pertama dan seterusnya</p>
-                                <span><a href="https://github.com/NandoI/Pemrograman-Web/tree/fc524209a551606c721c7806843ee4ea71503f87/utspemweb"><ion-icon name="logo-github"></ion-icon>Github</a></span>
+                                <p>Tema dari website ini adalah perkenalan tentang saya, yang dimana web ini adalah web pertama saya.</p>
+                                <span><a href="https://github.com/NandoI/Personal-Website.git"><ion-icon name="logo-github"></ion-icon>Github</a></span>
                             </div>
                         </li>
                         <li class="tambah-atas">
-                            <div class="img tiga"></div>
-                            <h2>Output database</h2>
+                            <div class="img lima"></div>
+                            <h2>BMI Calculator</h2>
                             <div class="tambah-dal">
                                 <ul>
                                     <li class="html"><ion-icon name="logo-html5"></ion-icon>HTML</li>
                                     <li class="css"><ion-icon name="logo-css3"></ion-icon>CSS</li>
                                     <li class="js"><ion-icon name="logo-javascript"></ion-icon>JavaScript</li>
                                 </ul>
-                                <p>Tema dari website ini adalah menampilkan data dari database yang sudah diset diawal mulai dari kolom pertama dan seterusnya</p>
-                                <span><a href="https://github.com/NandoI/Pemrograman-Web/tree/fc524209a551606c721c7806843ee4ea71503f87/utspemweb"><ion-icon name="logo-github"></ion-icon>Github</a></span>
+                                <p>website ini akan menghitung anda overweight, normal atau kurus dengan memasukkan tinggi dan berat</p>
+                                <span><a href="https://github.com/NandoI/BMI-Calculator.git"><ion-icon name="logo-github"></ion-icon>Github</a></span>
                             </div>
                         </li>
                         <li class="tambah-atas">
-                            <div class="img tiga"></div>
-                            <h2>Output database</h2>
+                            <div class="img enam"></div>
+                            <h2>Website Cukur</h2>
                             <div class="tambah-dal">
                                 <ul>
                                     <li class="html"><ion-icon name="logo-html5"></ion-icon>HTML</li>
                                     <li class="css"><ion-icon name="logo-css3"></ion-icon>CSS</li>
                                     <li class="js"><ion-icon name="logo-javascript"></ion-icon>JavaScript</li>
                                 </ul>
-                                <p>Tema dari website ini adalah menampilkan data dari database yang sudah diset diawal mulai dari kolom pertama dan seterusnya</p>
-                                <span><a href="https://github.com/NandoI/Pemrograman-Web/tree/fc524209a551606c721c7806843ee4ea71503f87/utspemweb"><ion-icon name="logo-github"></ion-icon>Github</a></span>
+                                <p>Website ini bertujuan untuk memboking dan mempromosikan suatu tempat Cukur agar lebih modern dan praktis</p>
+                                <span><a href="https://github.com/NandoI/MbkmSkilvul.git"><ion-icon name="logo-github"></ion-icon>Github</a></span>
                             </div>
                         </li>         
                     </ul>
@@ -116,7 +116,7 @@
             <h1>Faishal Fernando Hutama</h1>
             <div class="tambah-fot">
                 <ul class="Nav-fot">
-                    <li><a href="#Home">Home</a></li>
+                    <li><a href="/index.html">Home</a></li>
                     <li><a href="/about/about.html">About</a></li>
                     <li><a href="/porto/porto.html">Porto</a></li>
                     <li><a href="/blog/blog.html">Blog</a></li>
