--- a/about/about.html
+++ b/about/about.html
@@ -92,7 +92,7 @@
             <h1>Faishal Fernando Hutama</h1>
             <div class="tambah-fot">
                 <ul class="Nav-fot">
-                    <li><a href="#Home">Home</a></li>
+                    <li><a href="/index.html">Home</a></li>
                     <li><a href="/about/about.html">About</a></li>
                     <li><a href="/porto/porto.html">Porto</a></li>
                     <li><a href="/blog/blog.html">Blog</a></li>
