Penyelesaian page blog

--- a/about/about.html
+++ b/about/about.html
@@ -41,7 +41,7 @@
                     </div>
                 </div>
                 <div class="scroll">
-                    <h4>scroll down for more ⬇️</h4>
+                    <h4>scroll down for more ↓</h4>
                 </div>           
             </div>
         </section>
