penambahan contact dan link cv pada index page

--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
             <div class="img"></div>
             <div class="button-hero">
                <ul>
-                <li><span><a href="#">Download CV</a></span></li>
-                <li><a href="#">Contact Me</a></li>
+                <li><span><a href="https://drive.google.com/file/d/1COW4VBX8XglICMSEo6wiYdGlA1SvBopW/view?usp=drive_link">Download CV</a></span></li>
+                <li><a href="#contact">Contact Me</a></li>
                </ul>
             </div>
        </section>
@@ -110,14 +110,38 @@
             <a href="porto/porto.html"><h3>More Project</h3></a>
         </section>
 
-        <section>
+        <section id="contact">
             <div class="container-con">
                 <h1>Contact</h1>
                 <div class="tambah-con">
                     <ul>
-                        <li><a href="#"></a></li>
-                        <li><a href="#"></a></li>
-                        <li><a href="#"></a></li>
+                        <li>
+                            <div class="img wa">
+                            </div>
+                            <div class="desk-con">
+                                <h3>Whatapp</h3>
+                                <p>+62 89652895078</p>
+                                <a href="https://api.whatsapp.com/send?phone=6289652895078" class="link-con">Send Me A Message</a>
+                            </div>
+                        </li>
+                        <li>
+                            <div class="img gmail">
+                            </div>
+                            <div class="desk-con">
+                                <h3>Gmail</h3>
+                                <p>nandolop71@gmail.com</p>
+                                <a href="https://mail.google.com/mail/u/0/#compose?su=Subjek%20Email&to=nandolop71@gmail.com" class="link-con">Send Me A Message</a>
+                            </div>
+                            
+                        </li>
+                        <li>
+                            <div class="img tele"></div>
+                            <div class="desk-con">
+                                <h3>Telegram</h3>
+                                <p>+62 89652895078</p>
+                                <a href="https://t.me/6289652895078" class="link-con">Send Me A Message</a>
+                            </div>
+                        </li>
                     </ul>
                 </div>
             </div>
