perbaikan slicing about, porto

--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
                 <div class="tambah">
                     <ul>
                         <li><a href="#Home">Home</a></li>
-                        <li><a href="/about/about.html">About</a></li>
-                        <li><a href="/porto/porto.html">Porto</a></li>
-                        <li><a href="/blog/blog.html">Blog</a></li>
+                        <li><a href="./about/about.html">About</a></li>
+                        <li><a href="./porto/porto.html">Porto</a></li>
+                        <li><a href="./blog/blog.html">Blog</a></li>
                     </ul>
                 </div>
            </nav>
@@ -30,7 +30,7 @@
             <div class="img"></div>
             <div class="button-hero">
                <ul>
-                <li><span><a href="https://drive.google.com/file/d/1COW4VBX8XglICMSEo6wiYdGlA1SvBopW/view?usp=drive_link">Download CV</a></span></li>
+                <li><span><a href="https://drive.google.com/file/d/1F8bpUqo0M0r7UoZSMQjzJsnYIyUAEKsG/view?usp=sharing">Download CV</a></span></li>
                 <li><a href="#contact">Contact Me</a></li>
                </ul>
             </div>
@@ -154,9 +154,9 @@
             <div class="tambah-fot">
                 <ul class="Nav-fot">
                     <li><a href="#Home">Home</a></li>
-                    <li><a href="/about/about.html">About</a></li>
-                    <li><a href="/porto/porto.html">Porto</a></li>
-                    <li><a href="/blog/blog.html">Blog</a></li>
+                    <li><a href="./about/about.html">About</a></li>
+                    <li><a href="./porto/porto.html">Porto</a></li>
+                    <li><a href="./blog/blog.html">Blog</a></li>
                 </ul>
                 <ul class="sosmed">
                     <li><a href="https://github.com/NandoI"><ion-icon name="logo-github" class="besar"></ion-icon></a></li>
