--- a/porto/porto.html
+++ b/porto/porto.html
@@ -13,10 +13,10 @@
                 <h1>Personal Website</h1>
                 <div class="tambah">
                     <ul>
-                        <li><a href="/index.html">Home</a></li>
-                        <li><a href="/about/about.html">About</a></li>
-                        <li><a href="/porto/porto.html">Porto</a></li>
-                        <li><a href="/blog/blog.html">Blog</a></li>
+                        <li><a href="../index.html">Home</a></li>
+                        <li><a href="../about/about.html">About</a></li>
+                        <li><a href="porto.html">Porto</a></li>
+                        <li><a href="../blog/blog.html">Blog</a></li>
                     </ul>
                 </div>
             </div>
@@ -104,7 +104,33 @@
                                 <p>Website ini bertujuan untuk memboking dan mempromosikan suatu tempat Cukur agar lebih modern dan praktis</p>
                                 <span><a href="https://github.com/NandoI/MbkmSkilvul.git"><ion-icon name="logo-github"></ion-icon>Github</a></span>
                             </div>
-                        </li>         
+                        </li>
+                        <li class="tambah-atas">
+                            <div class="img tuju"></div>
+                            <h2>Website Cukur1</h2>
+                            <div class="tambah-dal">
+                                <ul>
+                                    <li class="html"><ion-icon name="logo-html5"></ion-icon>HTML</li>
+                                    <li class="css"><iconify-icon icon="ri:bootstrap-line"></iconify-icon>BootStrap</li>
+                                    <li class="js"><ion-icon name="logo-javascript"></ion-icon>JavaScript</li>
+                                </ul>
+                                <p>Website ini bertujuan untuk memboking dan mempromosikan suatu tempat Cukur agar lebih modern dan praktis</p>
+                                <span><a href="https://fullstack-7.github.io/Cukurans-FS7/index.html">More Info</a></span>
+                            </div>
+                        </li> 
+                        <li class="tambah-atas">
+                            <div class="img delapan"></div>
+                            <h2>Website Cukur2</h2>
+                            <div class="tambah-dal">
+                                <ul>
+                                    <li class="html"><iconify-icon icon="mdi:react"></iconify-icon>React</li>
+                                    <li class="css"><iconify-icon icon="mdi:tailwind"></iconify-icon>TailWind</li>
+                                    <li class="js"><iconify-icon icon="skill-icons:expressjs-dark" width="20" height="20"></iconify-icon>Express</li>
+                                </ul>
+                                <p>Website ini bertujuan untuk memboking dan mempromosikan suatu tempat Cukur agar lebih modern dan praktis</p>
+                                <span><a href="https://cukurans.netlify.app">More Info</a></span>
+                            </div>
+                        </li>                  
                     </ul>
                 </div>
             </div>
@@ -116,10 +142,10 @@
             <h1>Faishal Fernando Hutama</h1>
             <div class="tambah-fot">
                 <ul class="Nav-fot">
-                    <li><a href="/index.html">Home</a></li>
-                    <li><a href="/about/about.html">About</a></li>
-                    <li><a href="/porto/porto.html">Porto</a></li>
-                    <li><a href="/blog/blog.html">Blog</a></li>
+                    <li><a href="./index.html">Home</a></li>
+                    <li><a href="../about/about.html">About</a></li>
+                    <li><a href="../porto/porto.html">Porto</a></li>
+                    <li><a href="../blog/blog.html">Blog</a></li>
                 </ul>
                 <ul class="sosmed">
                     <li><a href="https://github.com/NandoI"><ion-icon name="logo-github" class="besar"></ion-icon></a></li>
@@ -133,5 +159,6 @@
 
    <script src="script.js"></script>
    <script src="https://unpkg.com/ionicons@latest/dist/ionicons.js"></script>
+   <script src="https://code.iconify.design/iconify-icon/1.0.7/iconify-icon.min.js"></script>
 </body>
 </html>
