--- a/about/about.html
+++ b/about/about.html
@@ -13,10 +13,10 @@
                 <h1>Personal Website</h1>
                 <div class="tambah">
                     <ul>
-                        <li><a href="/index.html">Home</a></li>
-                        <li><a href="/about/about.html">About</a></li>
-                        <li><a href="/porto/porto.html">Porto</a></li>
-                        <li><a href="/blog/blog.html">Blog</a></li>
+                        <li><a href="../index.html">Home</a></li>
+                        <li><a href="../about/about.html">About</a></li>
+                        <li><a href="../porto/porto.html">Porto</a></li>
+                        <li><a href="../blog/blog.html">Blog</a></li>
                     </ul>
                 </div>
             </div>
@@ -53,7 +53,7 @@
                         <li>
                             <i class="fa-brands fa-php dal-sect-sk" id="php"></i>
                             <h4>Php</h4>
-                            <h5>Intermediate</h5>
+                            <h5>Beginner</h5>
                         </li>
                         <li>
                             <i class="fa-brands fa-html5 dal-sect-sk" id="html"></i>
@@ -68,16 +68,31 @@
                         <li>
                             <i class="fa-brands fa-square-js dal-sect-sk" id="js"></i>
                             <h4>Java Script</h4>
+                            <h5>Intermediate</h5>
+                        </li>
+                        <li>
+                            <iconify-icon icon="logos:react" width="30" height="30"></iconify-icon>
+                            <h4>React</h4>
+                            <h5>Intermediate</h5>
+                        </li>
+                        <li>
+                            <iconify-icon icon="skill-icons:expressjs-dark" width="30" height="30"></iconify-icon>
+                            <h4>Express</h4>
+                            <h5>Intermediate</h5>
+                        </li>
+                        <li>
+                            <iconify-icon icon="vscode-icons:file-type-tailwind" width="30" height="30"></iconify-icon>
+                            <h4>Tailwind</h4>
                             <h5>Beginer</h5>
                         </li>
                         <li>
-                            <i class="fa-brands fa-python dal-sect-sk" id="python"></i>
-                            <h4>python</h4>
-                            <h5>Beginer</h5>
+                            <iconify-icon icon="skill-icons:mongodb" width="30" height="30"></iconify-icon>
+                            <h4>MongoDB</h4>
+                            <h5>Intermediate </h5>
                         </li>
                         <li>
-                            <i class="fa-solid fa-database dal-sect-sk" id="mysql"></i>
-                            <h4>Mysql</h4>
+                            <iconify-icon icon="logos:bootstrap" width="30" height="30"></iconify-icon>
+                            <h4>BootStrap</h4>
                             <h5>Beginer </h5>
                         </li>
                     </ul>
@@ -92,10 +107,10 @@
             <h1>Faishal Fernando Hutama</h1>
             <div class="tambah-fot">
                 <ul class="Nav-fot">
-                    <li><a href="/index.html">Home</a></li>
-                    <li><a href="/about/about.html">About</a></li>
-                    <li><a href="/porto/porto.html">Porto</a></li>
-                    <li><a href="/blog/blog.html">Blog</a></li>
+                    <li><a href="../index.html">Home</a></li>
+                    <li><a href="../about/about.html">About</a></li>
+                    <li><a href="../porto/porto.html">Porto</a></li>
+                    <li><a href="../blog/blog.html">Blog</a></li>
                 </ul>
                 <ul class="sosmed">
                     <li><a href="https://github.com/NandoI"><ion-icon name="logo-github" class="besar"></ion-icon></a></li>
@@ -109,5 +124,6 @@
     <script src="script.js"></script>
     <script src="https://unpkg.com/ionicons@latest/dist/ionicons.js"></script>
     <script src="https://kit.fontawesome.com/bcdab04aab.js" crossorigin="anonymous"></script>
+    <script src="https://code.iconify.design/iconify-icon/1.0.7/iconify-icon.min.js"></script>
 </body>
 </html>
